--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap-sass": "^3.3.7",
+    "moment": "^2.18.1"
   }
 }
