--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "escuderiast",
   "dependencies": {
     "bootstrap-datepicker": "^1.6.4",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "select2": "3.5.2"
   }
 }
