--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "ember-export-application-global": "^2.0.0",
     "ember-legacy-views": "^0.2.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-power-select": "^1.9.9",
     "ember-resolver": "^4.0.0",
+    "ember-select-2": "^1.3.0",
     "ember-source": "~2.13.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
